--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,10 @@
 }
 
 body{
-  background-image: url(../img/background-2.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: black;
+  background-image: url(../img/background-3.png);
+  background-repeat: repeat;
+  background-size: auto;
+  /*background-color: black;*/
   color: white;
   position: relative;
   border: 2px solid white;
@@ -37,7 +37,7 @@ a:hover {
 
 .header {
   display: inline-block;
-  border: 3px solid red;
+  /*border: 3px solid red;*/
   margin: 0;
   position: relative;
   left: 50%;
