--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,6 @@ body{
   background-size: auto;
   color: white;
   position: relative;
-  /*border: 2px solid white;*/
   height: 100vh;
 }
 
@@ -38,6 +37,7 @@ table {
  th {
    font-size: 20px;
  }
+
  td {
   border: 2px outset darkgray;
   padding: 15px 15px;
@@ -57,7 +57,6 @@ table {
 
 .header {
   display: inline-block;
-  /*border: 3px solid red;*/
   margin: 0;
   position: relative;
   left: 50%;
@@ -70,9 +69,6 @@ table {
 
 .header h1 {
   font-family: 'Metamorphous', cursive;
-  /*font-family: 'Acme', sans-serif;*/
-  /*font-family: 'Permanent Marker', cursive;*/
-  /*font-family: 'Kumar One', cursive;*/
   margin: 0;
   position: absolute;
   top: 75%;
@@ -103,8 +99,6 @@ table {
 
 
 .content {
-  /*border: 3px solid green;*/
-  /*padding-top: 1%;*/
   position: relative;
   width: 80%;
   margin: 0 10%;
@@ -115,13 +109,11 @@ table {
 
 .info-container {
   width: 20%;
-  /*border: 2px solid yellow;*/
   font-family: 'Metamorphous', cursive;
   text-shadow: 4px 4px 6px black;
   font-size: 14px;
   position: absolute;
   left: 5%;
-
 }
 
 .info-container p {
@@ -131,8 +123,12 @@ table {
   padding: 5px 5px;
 }
 
+.info-container p::first-letter {
+  color: 	#ff003f;
+  font-size: xx-large;
+}
+
 .table-container {
-  /*border: 2px solid red;*/
   width: 20%;
   position: absolute;
   left: 30%;
@@ -143,7 +139,6 @@ table {
   width: 50%;
   position: absolute;
   left: 50%;
-  /*border: 3px solid blue;*/
 }
 
 .wizard-container p {
@@ -159,17 +154,17 @@ table {
 }
 
 .order-now {
-
-    width: 20%;
-    height: 50%;
-    position: absolute;
-    left: 47%;
-    bottom: 20%;
-    display: block;
-   margin-left: auto;
-   margin-right: auto;
-   font-family: 'Metamorphous', cursive;
+  width: 20%;
+  height: 50%;
+  position: absolute;
+  left: 47%;
+  bottom: 20%;
+  display: block;
+ margin-left: auto;
+ margin-right: auto;
+ font-family: 'Metamorphous', cursive;
 }
+
 .order-now img {
  width: 20%;
  position: absolute;
@@ -197,19 +192,19 @@ input, textarea {
   display: table;
   clear: both;
 }
+
 .footer {
   position: absolute;
   border: 8px solid yellow;
   top: 80%;
-
 }
+
 .gallery {
   float: left;
-  /*border: 3px solid blue;*/
   position: absolute;
   width: 80%;
   top: 100%;
-  left: 10%;
+  left: 14%;
 }
 
 .gallery img {
@@ -219,7 +214,6 @@ input, textarea {
   margin-left: 4%;
   margin-right: 4%;
 }
-
 
 #orderNow {
   position: absolute;
@@ -231,9 +225,6 @@ input, textarea {
 #wizard {
   height: 100%;
   width: 50%;
-  /*position: absolute;
-  left: 37%;
-  bottom: 20%;*/
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -254,13 +245,6 @@ input, textarea {
   right: 20%;
   top: 30%;
 }
-
-
-
-
-
-
-
 
 /*HOVER EFFECTS*/
 /* Buzz */
